# tcd

./: LICENSE  README.rst  default.nix  flake.nix  pyproject.toml  requirements.txt  setup.py
tcd/: __init__.py  constants.py  crypto.py  exceptions.py
tcd/app/: __init__.py  run.py
