[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tcd"
version = "0.1dev"
description = "TCD is tool for decrypted Telegram Desktop media cache"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Topic :: Utilities",
]
keywords = ["decrypt", "crypto", "telegram", "tool"]
authors = ["Radik Islamov <vizid1337@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.scripts]
tcd = "tcd.app.run:main"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
pyqt5 = "5.15.9"
tgcrypto = "^1.2.5"

[tool.poetry.urls]
homepage = "https://github.com/ViZiD/tcd"
repository = "https://github.com/ViZiD/tcd"

[tool.poetry.group.dev.dependencies]
ruff = "<=0.5.1"
mypy = "^1.11.0"
types-aiofiles = "^24.1.0.20240626"

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.isort]
known-third-party = ["pyqt5", "aiofiles", "tgcrypto"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
